--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "gatsby": "^3.0.1",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-paginate": "^1.1.1",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-microcms": "^1.1.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "use-query-params": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
